# ProfaneDB

./: .dockerignore  .gitignore  .gitlab-ci.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  logo.xcf
client_test/: .gitignore  nested.proto  nested_pb2.py  test.proto  test_client.py  test_pb2.py
client_test/profanedb/protobuf/: db.proto  db_pb2.py  options.proto
cmake/Modules/: FindgRPC.cmake
grpc_test/: client.py  nested_pb2.py  requirements.txt  schema  test_pb2.py
grpc_test/profanedb/protobuf/: db_pb2.py  options_pb2.py  storage_pb2.py
src/: CMakeLists.txt
src/prodisdb/protobuf/: CMakeLists.txt  db.pb.cc  db.pb.h  db.proto  options.pb.cc  options.pb.h  options.proto
src/prodisdb/server/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  prodis_error_collector.cpp  prodis_error_collector.h  prodis_server.cpp  prodis_server.h  server.cpp  server.h
src/profanedb/: CMakeLists.txt  db.cpp  db.h  db.hpp
src/profanedb/boot/: CMakeLists.txt  schema.h
src/profanedb/boot/protobuf/: schema.cpp  schema.h
src/profanedb/format/: CMakeLists.txt  marshaller.h  unmarshaller.h
src/profanedb/format/protobuf/: loader.cpp  loader.h  marshaller.cpp  marshaller.h  unmarshaller.cpp  unmarshaller.h  util.cpp  util.h
src/profanedb/protobuf/: BUILD.md  CMakeLists.txt  db.grpc.pb.cc  db.grpc.pb.h  db.pb.cc  db.pb.h  db.proto  options.grpc.pb.cc  options.grpc.pb.h  options.pb.cc  options.pb.h  options.proto  storage.grpc.pb.cc  storage.grpc.pb.h  storage.pb.cc  storage.pb.h  storage.proto
src/profanedb/server/: CMakeLists.txt  config.cpp  config.h  main.cpp  parser.cpp  parser.h  server.conf  server.cpp  server.h
src/profanedb/storage/: CMakeLists.txt  config.cpp  config.h  db.cpp  db.h  loader.cpp  loader.h  normalizer.cpp  normalizer.h  parser.cpp  parser.h  rocks.cpp  rocks.h  rootsourcetree.cpp  rootsourcetree.h  storage.cpp  storage.h
src/profanedb/util/: CMakeLists.txt  randomgenerator.cpp  randomgenerator.h
src/profanedb/vault/: CMakeLists.txt  storage.h
src/profanedb/vault/memory/: storage.cpp  storage.h
src/profanedb/vault/rocksdb/: storage.cpp  storage.h
src/profanedb/vault/sql/: storage.cpp  storage.h
test/: CMakeLists.txt  nested.proto  test.proto  test_client.py  test_pb2.py
test/prodisdb/protobuf/: db.proto  db_pb2.py  db_pb2_grpc.py  options.proto  options_pb2.py
test/profanedb/protobuf/: db_pb2.py  db_pb2_grpc.py  options.proto  options_pb2.py
test/profanedb/test/protobuf/: CMakeLists.txt  marshaller.test.cpp  randomgenerator.test.cpp  unmarshaller.test.cpp
test/profanedb/test/protobuf/schema/: CMakeLists.txt  nested.proto  test.proto
